--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build --no-lint --no-typescript",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -31,11 +31,11 @@
     "react-player": "2.12.0"
   },
   "devDependencies": {
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
-    "@types/node": "20.4.5",
-    "@types/bcryptjs": "2.4.2",
-    "typescript": "5.1.6",
+    "@types/node": "^20.4.5",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@types/bcryptjs": "^2.4.2",
+    "typescript": "^5.1.6",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12"
   }
