Describe your changes here

--- a/.env
+++ b/.env
@@ -1,2 +1,17 @@
 NEXT_TYPESCRIPT_IGNORE=1
-NEXT_DISABLE_ESLINT=1 
+NEXT_DISABLE_ESLINT=1
+
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=dizz8eatr
+CLOUDINARY_API_KEY=262487664898547
+CLOUDINARY_API_SECRET=kLF7K4oeGzCglsS9zeYWCWDZ-0I
+
+# Email Configuration
+EMAIL_USER=tuyizeredieudonne250@gmail.com
+EMAIL_PASSWORD=uptm gaek osrq gahe
+
+# NextAuth Configuration
+
+NEXTAUTH_SECRET='Kj#9mPx$2vLqW8rZtY&nF5sQ!uB3aHc@eDgJ7'
+
+NEXTAUTH_URL=http://localhost:3000
